tests/smt2/error/named-assertion_error.smt2
(check-sat-assuming ((! false :named x) unbound))
(declare-const x Bool)
(check-sat)